--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .spinner {
+    margin: 3.2rem auto 1.6rem;
+    width: 60px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid rgb(90, 89, 89);
+    border-right-color: rgb(109, 108, 108);
+    animation: rotate 1s infinite linear;
+  }
+}
+
+.spinner-mini {
+  margin: 0;
+  width: 20px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 2px solid "#4C6B8A";
+  border-right-color: transparent;
+  animation: rotate 1s infinite linear;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
